other/block-stale-images/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: block-stale-images
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ns.yaml
    - script:
        content: |
          sed 's/validationFailureAction: audit/validationFailureAction: Enforce/' ../block-stale-images.yaml | kubectl create -f -
    - assert:
        file: chainsaw-step-01-assert-1.yaml
  - name: step-02
    try:
    - apply:
        file: pods-good.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: pods-bad.yaml
    - apply:
        file: podcontrollers-good.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: podcontrollers-bad.yaml
  - name: step-99
    try:
    - script:
        content: kubectl delete all --all --force --grace-period=0 -n block-staleimg-ns
    - script:
        content: kubectl delete cpol block-stale-images
    - sleep:
        duration: 10s
    - script:
        content: kubectl delete all --all --force --grace-period=0 -n block-staleimg-ns
    - sleep:
        duration: 10s
